--- a/first_draft/style/style.css
+++ b/first_draft/style/style.css
@@ -21,3 +21,13 @@ width:1280px;
                 position:relative; right:50%;}
 #menu ul li a:hover{background-color: #F2F2F2;}
 
+
+/* about the baker */
+#aboutbakermain {
+    color:#000000;
+    width:600px;
+    margin:auto;
+    position:relative;
+    top:420px;
+    padding: 0 0 50px 0;
+}
