starting to code login

--- a/first_draft/style/style.css
+++ b/first_draft/style/style.css
@@ -1,7 +1,6 @@
 body {
     color:red;
 background-image:url('../graphics/background.jpg');
-background-repeat:no-repeat;
 }
 
 #main{
@@ -10,17 +9,27 @@ width:1280px;
 
 
 /* NAVBAR */
-#menu {width:100%; float:left;
-        overflow:hidden; position:absolute;
-        top:350px;}
-#menu ul {margin:0; padding:0; float:left;
-        position:relative; left:50%; text-align:center;}
-#menu ul li {display:inline; 
-            font-family: 'Lucida Calligraphy',cursive;}
-#menu ul li a{float:left; text-decoration: none;
-                color:#000000; padding: 10.5px 50px;
-                position:relative; right:50%;}
-#menu ul li a:hover{background-color: #F2F2F2;}
+#menu {
+    width:100%; float:left;
+    overflow:hidden; position:absolute;
+    top:350px;
+}
+#menu ul {
+    margin:0; width:1200px; padding:0; float:left;
+    position:relative; left:50%; text-align:center;
+}
+#menu ul li {
+    display:inline; 
+    font-family: 'Lucida Calligraphy',cursive;
+}
+#menu ul li a{
+    float:left; text-decoration: none;
+    color:#000000; padding: 10.5px 50px;
+    position:relative; right:40%;
+}
+#menu ul li a:hover{
+    background-color: #F2F2F2;
+}
 
 
 /* about the baker */
@@ -40,4 +49,13 @@ width:1280px;
     position:relative;
     top:400px;
     color:#000000;
+}
+
+
+/* login page */
+#login {
+    position:relative;
+    top:400px;
+    left:50px;
+    width:300px;
 }
