login page updates

--- a/first_draft/style/style.css
+++ b/first_draft/style/style.css
@@ -59,3 +59,9 @@ width:1280px;
     left:50px;
     width:300px;
 }
+#signup {
+    position:relative;
+    top:400px;
+    left:50px;
+    width:300px;
+}
