--- a/first_draft/style/style.css
+++ b/first_draft/style/style.css
@@ -61,7 +61,6 @@ padding: 10.5px 50px;
 position:relative;
 right:50%;
 z-index:10;
->>>>>>> scottofthescience/master
 }
 
 /* commenting out while I work on fade effect
@@ -115,26 +114,37 @@ float:right;
 /* login page */
 #login {
     position:relative;
-    top:400px;
     left:50px;
     width:300px;
+    top:80px;
 }
 #signup {
     position:relative;
-    top:400px;
     left:50px;
     width:300px;
 }
 #new_user_form {
     position:relative;
-    top:150px;
+    top:-160px;
     left:400px;
 }
 
+
+/* Admin page */
+#adminbody{
+    padding:60px;
+}
+
+
+/* Manage Account page */
+#managebody{
+    padding:60px;
+}
+
+/* footer */
 #footer {
 position:relative;
-left:50%;
-margin: 300px 10px 10px -300px;
+margin: auto;
 width:600px;
 background-color:#FFBF40;
 text-align:center;
